@@ -8,6 +8,7 @@ New features:
 A.F.I..... [ZBXNEXT-1569] implemented user name and surname displaying in acknowledgements (Ivo, Oleg)
 
 Bug fixes:
+..F....... [ZBX-6887] fixed "Internal" message in authentication, event and user context (Eduard)
 A......... [ZBX-6124] removed unused API methods (Eduard)
 ..F....... [ZBX-6927] improved validation messages (Eduard)
 ..F....... [ZBX-6923] fixed mass delete in template list, improved code quality in hosts and templates (Vitalij)
